# fnva

./: .clippy.toml  .gitignore  .npmignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  README_en.md  README_zh.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  build.yml  ci.yml  update-versions.yml
config/: config.toml.example  java_versions.toml  maven_versions.toml
docs/architecture/: core-design.md
docs/development/: contributing.md  roadmap.md
docs/spec/: environment-switching-flow.md  shell-integration.md  shell-template-system.md  tool-source-protocol.md  troubleshooting.md
docs/user-guide/: encoding-fixes.md  shell-integration.md
lib/: encoding-utils.js
scripts/: build-all.sh  build-local.sh  build-platforms.js  build-platforms.sh  check-permissions.js  check-style.sh  cleanup-legacy-shims.js  ensure-executable-permissions.js  fix-fnva-permissions.sh  format-code.sh  install-shell-integration.js  install.ps1  install.sh  prepare-publish.sh  uninstall-shell-integration.js  uninstall.ps1  uninstall.sh  update-java-versions.js
src/: config.rs  installer.rs  java.rs  lib.rs  llm.rs  main.rs  package_manager.rs  platform.rs  remote.rs  remote_backup.rs  testutil.rs  utils.rs
src/cli/: commands.rs  doctor.rs  handlers.rs  mod.rs  output.rs  print.rs
src/core/: constants.rs  environment_manager.rs  error_messages.rs  mod.rs  presentation.rs  session.rs  switcher.rs
src/environments/: mod.rs
src/environments/cc/: environment_manager.rs  mod.rs  provider.rs  setup.rs
src/environments/java/: downloader.rs  environment_manager.rs  installer.rs  manager.rs  mod.rs  paths.rs  scanner.rs  validator.rs  version_discovery.rs  version_manager.rs
src/environments/llm/: environment_manager.rs  manager.rs  mod.rs  providers.rs  validator.rs
src/environments/maven/: downloader.rs  environment_manager.rs  installer.rs  mod.rs  paths.rs  validator.rs  version_discovery.rs
src/error/: app_error.rs  context.rs  mod.rs
src/infrastructure/: config.rs  config_repository.rs  mod.rs  network.rs  paths.rs  scanner.rs
src/infrastructure/config/: download.rs  environments.rs  mirrors.rs  mod.rs
src/infrastructure/installer/: generic.rs  mod.rs  package_manager.rs  utils.rs
src/infrastructure/remote/: aliyun_downloader.rs  cache.rs  download.rs  github_downloader.rs  http_client.rs  java_downloader.rs  mirror_utils.rs  mod.rs  platform.rs  remote_manager.rs  repositories.rs  template_downloader.rs  tsinghua_downloader.rs  utils.rs  version_registry.rs
src/infrastructure/shell/: current_envs.rs  hook.rs  integration.rs  mod.rs  platform.rs  script_builder.rs  script_factory.rs  script_strategy.rs
src/infrastructure/shell/templates/: bash_cc_switch.hbs  bash_integration.hbs  bash_java_switch.hbs  bash_llm_switch.hbs  bash_maven_switch.hbs  cmd_cc_switch.hbs  cmd_integration.hbs  cmd_java_switch.hbs  cmd_llm_switch.hbs  cmd_maven_switch.hbs  fish_cc_switch.hbs  fish_integration.hbs  fish_java_switch.hbs  fish_llm_switch.hbs  fish_maven_switch.hbs  powershell_cc_switch.hbs  powershell_integration.hbs  (+3 more)
src/infrastructure/tool_protocol/: descriptor.rs  dir_cache.rs  downloader.rs  generic_downloader.rs  mirror_resolver.rs  mod.rs  template_vars.rs  version_discovery.rs
src/utils/: env_vars.rs  filesystem.rs  mod.rs  path.rs  paths.rs  validation.rs
tests/: cli.rs
windows/fnm/: installer.ps1
