[package]
name = "fnva"
version = "0.0.56"
edition = "2021"
authors = ["protagonistss"]
description = "跨平台环境切换工具，支持 Java 和 LLM 环境配置"
license = "MIT"
repository = "https://github.com/Protagonistss/fnva"
homepage = "https://github.com/Protagonistss/fnva"
documentation = "https://github.com/Protagonistss/fnva#readme"
readme = "README.md"
keywords = ["environment", "java", "llm", "cli", "version-manager"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "scripts/",
    "platforms/",
    ".github/",
    "*.log",
    ".vscode/",
    ".idea/",
    "package.json",
    "package-lock.json",
    "lib/",
    "bin/*.js",
    "bin/*.ps1",
    "bin/*.bat",
    "bin/*.cmd",
    ".npmignore",
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
which = "6.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
serde_json = "1.0"
handlebars = "4.0"
url = "2.5"
futures-util = "0.3"
indicatif = "0.17"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10.9"
hex = "0.4.3"

